--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,7 @@
 
     --color-gray-100: #dae4f2;
     --color-gray-200: #c8d0da;
-    --color-gray-300: #95a181;
+    --color-gray-300: #95a1b1;
     --color-gray-400: #6f7d90;
     --color-gray-500: #2a313c;
     --color-gray-600: #21252c;
